project2/force-app/main/default/objects/Product2/fields/Chatter_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Group_ID__c</fullName>
    <label>Chatter Group ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>