project2/force-app/main/default/objects/Product2/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>The date and time the bidding ends</description>
    <label>Close Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>