project2/force-app/main/default/objects/Product2/fields/Current_Highest_Bid__c.field-meta.xml
<CustomField>
    <fullName>Current_Highest_Bid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Highest Bid</label>
    <referenceTo>Bid__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Product_Highest_Bid</relationshipName>
    <type>Lookup</type>
</CustomField>